syntax = "proto3";
package xsuportal.proto.resources;
option go_package = "github.com/isucon/isucon10-final/benchmarker/proto/xsuportal/resources";

message Contestant {
  string id = 1;
  int64 team_id = 2;
  string name = 3;
  bool is_student = 4;
  bool is_staff = 5;
}
